@@ -5,7 +5,7 @@ AUX 99-iscsi.rules 81 SHA256 35f1475f02f9447c6d1d9e5249eef2f3e34206356f7f675ebab
 AUX initiatorname.iscsi 1282 SHA256 4ae558522881796f67ad5915ecf38d01e64c9d9768469847adb17405404485f3 SHA512 c37990050123c6f805016f009a3d09452db2a3cfbb359efa50350c7ff4b6adc75bc1f8aba26190829729b75639b8e52c77f31bd719c5f945869941f651121743 WHIRLPOOL 7ff4ef48a7d3decc96160681a8ed82b6848b238ac38f8973d3e5da12e346a0c26f7bee67d7ba81197b9fecb679e9046e6fec85f90d97068aa622aceca875bda0
 AUX iscsid-conf.d 422 SHA256 3e2a63143e3167f20844ef94f1383180b69c245092583856fd26316674cf4114 SHA512 d197bbe2ce610cc2d4a1269c8d7a067ca5e3b0f3d8bb0804c2c39e0cf512bcbf7b5de45b7d6ffd5cf918dc395c7cf32c40e64b4348d00a4d0223ee44c463709a WHIRLPOOL 19e7dc2d647a271dd67bf2f92e3c866719b1a7c978ecc86395d3586ab0c897e93ab4dce740497a6139f4fae1c5a34c455b806c627c9a9f876133d808890a85bf
 AUX iscsid-init.d 2206 SHA256 9462e7018527f6ec26db623694070a6d2e834af8e174439ecb3ee5b5cab6da5d SHA512 bbd3e120a08cbc506ceec9bf2cec0b1ef9a379b9e39339cfedf68bd0f1bff4185877c305a9276eb7a6da3c33e866439c0bc781f1c92411c4173b15704a1fbab6 WHIRLPOOL 8a7e38f380e9b1c3d9993ed6ed06fb1efe1ff740fad264747f8f433842acb318ad63125dd37865018c8d220cc45d76dad51e3fa258fc0c2fd036e4a07fe50f51
-AUX iscsidev.sh 2061 SHA256 c2284efa67964617375831dfd78f21ad3869b0a789b4dcb9d4a6e67fc5f875cf SHA512 3d00cfcbc7dd8a83b4308fdd6761fcd86378eb1c3eb168bf8b0d95c0e4be8f10d5b5bfb039a078cba46ee609f5ee701793c7ce02e3861b438d478eb64336ab75 WHIRLPOOL e485f1a03aa5b7c623b0d2152a1db9f663d5f9607e2b4ef03eb88fa00ac1a916407e65356b662327d23e3f82f5aa26fc73c1423d09ceb66225c8498ce8ed5d83
+AUX iscsidev.sh 2119 SHA256 1189dc43936fa5e428ad05fe0299d2ffdffe28ccd193396213ac9d59a5c25aaf SHA512 b4ed7fad25e3f000134a77f3aea2702f03ff75e99ecf49e580085127ab58de5a64bea9c4fc2ae5b324deafd0a860494d1a8dc1223db7d3679b960552f0c00813 WHIRLPOOL 28f57226d487fc0843e571c8ceeecf3e2b0eec506efef0b7a54636b1479dfc964d405f2be7f134c0858a24d1d24c67adb6ca9153ed9aaf4955ae403b4500d845
 AUX open-iscsi-2.0.872-conf.d 422 SHA256 3e2a63143e3167f20844ef94f1383180b69c245092583856fd26316674cf4114 SHA512 d197bbe2ce610cc2d4a1269c8d7a067ca5e3b0f3d8bb0804c2c39e0cf512bcbf7b5de45b7d6ffd5cf918dc395c7cf32c40e64b4348d00a4d0223ee44c463709a WHIRLPOOL 19e7dc2d647a271dd67bf2f92e3c866719b1a7c978ecc86395d3586ab0c897e93ab4dce740497a6139f4fae1c5a34c455b806c627c9a9f876133d808890a85bf
 AUX open-iscsi-2.0.872-dont-call-configure.patch 296 SHA256 92ab247afde924a6d07643abc2cb34598a2fb13f62718684803ab44b9bce7241 SHA512 513e775695288b747b40cfb9815c9083b61637f0e3ba241f5d5f3363730059ac4a01e55c23ab3ff983da7d3a5b40448447740ac35e0748c4d5e8942946146522 WHIRLPOOL af5c1cae289cf669dcd9cc6ce02e6a7e6603dceb8f3827d79f4d7adeb35aa9c9c6e588e1e915c078c31532a9985f4fb2a74fe7270269c686be4d7f6c2083ae06
 AUX open-iscsi-2.0.872-glibc212.patch 266 SHA256 e7b299da12daed432f18a115b7a14eadb61a3db13df89af21a9078357ebf63ca SHA512 8d869642b27dc7d243cf5697858a19127e5e627dd62fd2a8879e4baf84f87aa07e7682faa5f7153ef75e8f9a78ae9b1a84e3260f449fbbb26d848064ec736630 WHIRLPOOL c501c6d8ae334974635f25060b29e326da7a6ef33062c518cd115fa7cae6a63ef3901dc7e1c421a70557b114cead6cc951a09712cf19c83c7f79ec96635fe7e4
@@ -18,23 +18,23 @@ AUX open-iscsi-2.0.873-Makefiles.patch 5441 SHA256 8b12789550bef694d49a4bf89752c
 DIST open-iscsi-2.0-872.tar.gz 900081 SHA256 37753697a170223ac02a292b3a23a315a3c747b490c42480e4057b676c9f8d4f SHA512 d26c87772b0b1d13a8bd2eea9db86b3c61af83efbb788116c01ab6a914ff3de634a7b1bff56c1161b28965315543edbfc2735b6c7fbd3f7797471fde63b69cc0 WHIRLPOOL 4b04c8481c6c5f094ca6f7761828006a84eda7a22a6b3a4d65e7b3e4b39e73ef839ec710b491e7ca731b047fa8c74a9c03a17e85519a62dfbeb95222cfbdd935
 DIST open-iscsi-2.0-873.tar.gz 667069 SHA256 7dd9f2f97da417560349a8da44ea4fcfe98bfd5ef284240a2cc4ff8e88ac7cd9 SHA512 4e67116cb7dd49381c9279645e5a661f05596ae6be3b832772089828b3764ca2d04b5dea1bcc337071efb52c3c75a6fb943136c659ee59500f3a198ed0dcea6b WHIRLPOOL 05af106f11da9f9f02c10edd5412d0f99816349e06e192059700eb1ae24a36027c3f0d7ed423aa7bb1c0b9d8b3aa1b6aa72a2aadb00f27762edf16b7f7d08c09
 EBUILD open-iscsi-2.0.872-r2.ebuild 3127 SHA256 792752be418e9b259f368e0e67938e707a65d705604eeaaabcc952f34ce3b6f5 SHA512 b242ee8c03b862766964b9fd75dd7ead40ab8dfae929613b9c3de7c22036279b5851143af076a3ca9b8d669bc509f75553723265470786a01deb5cd657ef63c9 WHIRLPOOL 20317bcb477a2e858e583ffa537d26ca9ade7e4251d8d635a1ec45cf6aeafb88fedd0890d285f50b74e5527f243fce60a80ab59765c0e6b69947458209bef734
-EBUILD open-iscsi-2.0.872-r3.ebuild 3299 SHA256 ec302af9fdf0131cfe4b511fe1013882ad2213fd8455da7bc7e0a077bc5d6893 SHA512 488db1ced18d106e2d63ba2c6594295f69c7b3b8b9d802c5b7fcdf79d17f20cc26a728b2f7151f810160f298a8b0ecd980f0609c971726c691a02b4cd9889f07 WHIRLPOOL 5dbe2171f56ce2082a64ef6cedd4ce1c27101e0ebd2befd1626f09fcadea66ff78a2724c5cbe2d881afd094ebfc95296f1570b11d6d6bd3730e44a7dd13ce811
+EBUILD open-iscsi-2.0.872-r3.ebuild 3314 SHA256 6eda8ff3b46ee2c59972988f15b292410f0544bd916bc49daf27bd45b8c08075 SHA512 1da23a61c245aa02bfbff9e790d175bda8c08939c67b58d911e941f848ed1d5bd44d47e2290ed6b171c45b2f40fea494c339ea173a49204a814fd238c8e8c012 WHIRLPOOL 9b2941534c162da128f98aa5a0832fdd225fd04012203b712d8c25f096c633f6354d48c5b2113361c5d7fe21681e1c18d7a2846a59bc18ef67a94c2c543510e7
 EBUILD open-iscsi-2.0.873.ebuild 2330 SHA256 56d4a4f7539ce5918fadc442ef6d789a1e10c680e1e81382b945eb41099a5cb8 SHA512 01277dff372ccf2b700ffbfd7fac54a10d7aeab82ea373246e55e6a9d29dae50e2db5200bd6c8e143d96980669c6b5c3c82528794c6f680d533b9da0fb4832c9 WHIRLPOOL 635efd978b29bbdbdc222bfdd1fb17d4a9d836a95897260bbb100b28af1147c476d6c9f8f0998653b2436ccfaa5576a84c67a58f9d34413724b4736ae887cd16
-MISC ChangeLog 12500 SHA256 e3e4ce66f54e3dffd4072ca647eb5d4fe365c5e1aab99f0e0ba1ee607a4134c9 SHA512 7c28377c11df3f6bb8572da62b1d95006d65ad2ed0eabf5efc2a99f3a390f4dbbd9f8008c10ffbad3a9f72bf0a818d6c023c9d02e672d324aa0c51c50f1f51fa WHIRLPOOL 5d566d956a61f0fc152d19ae4ffbbc5c5505e594188a8fe4e3d84cbd41600e9db0a68ca6fe6c492ae300b33260239b850f7f54cf3f86ddfc7c79738c7b2ea507
+MISC ChangeLog 12631 SHA256 ef9cfdfa2d00fd1722c8025eb05d30e190250ce37a7cc9506d2bd29d13dfe4ab SHA512 a838b8d5ff0fe13263ee6168ed0e7bff976241fb60dfff6a59533e2d8234e9fb91fa74943a3bc0b5ca36dbc0d001174f89d6df9ac8631fd3ecdd0aacd5c23b1f WHIRLPOOL aa788ddb0b6c5ad54b335837e5c1cb5e5b8344b5826e17d667f03aa1753adf51b3a00668f05fc03042eeef414cd8c591ed0de7adfc9f85228931a579f94e3310
 MISC metadata.xml 164 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92 SHA512 8eb0d5153d388f6ea069c64b93882244816a0a09aecc0d73cb872121ce0eb24c5ccafa96aad0b620b2300f319e1af101fa7fa6c5d0d561719d49bb07da0a2eca WHIRLPOOL 11a1441bddb7a6c69653c663902b7da5767ae6ad515ac2aabfc42fe37927a1ccc21472deeee454009ff720201a41c3e4a912df42661a0a87150fb46126da2d52
 -----BEGIN PGP SIGNATURE-----
 
-iQIcBAEBCAAGBQJVwXHeAAoJEGSje+quGaTomekQALwKmWbm/kLegsPqQyi/J3dE
-5CNgtb1Qr6UpfqU91qXKR/pQ0XzzFGdUtq1VaN9DdACuJrISrGKZ/Q2e1LxsrHPl
-wHrJWkqHgYbsDe1ofmds3RkxfGYTq7U+0lOPs3EBGHJxgoOk7jtYWVqmqyC9XBzo
-m16jTStPyV9NbVysRZzLQA5t2Z+715xDxJpNCQVaSTkkgKch38ELk241P0HnfWLY
-7NFtNFwjoIhaD6sv6CykE1e//aeRQlyPM4uk3hmUP3OqlHZPAbLYTDmJ8OdtiDUE
-wAMj6QyOqVtJzmELV1guYkg6TPp/0esl61q9Nze4ofgVkRtTY/ZnW9bWvYW87y0j
-KioDs4p6ogo4Sjey0toS37kjXw9SUJy62q2qPl4r6xybPI8RWiztXRhIrhjbupxZ
-GJ5XoTMuxBfk8puNCcs05fz97k2acXKPhF+nx6DnseUDpdpnGZV+QC3Fxlou45ob
-ABw850DBnggW6hdZqa+UbcSNHT2/hSHFYnyMwXUePF+LPThxAGwnBAFox/P6aOp1
-Fun5pOHv6uaNOijMhYtkjw4vrLnV9J7anMVVMG3h0zsIm1KZi9bgD7Atngq6d3FT
-SlvgLWDBLl8gxk/qHrvjORm21/vt0FLmrSYvaBuIucQJU8cENZf5Heha34OoUrwK
-/xBncpKhRwDm+sOnIDHy
-=RfGR
+iQIcBAEBCAAGBQJVwtA1AAoJEGSje+quGaTobl4P/3y7K19UTsKL+a/I96CZvgQo
+0mdakx1zhafrOYsc06VuO1Sc/4YyLcERt6sawZXpkEbd5plGun8p7OKZ9yP/7lX7
+Adge1pvlp4wqJfIGPqOzkn7Tc4GW/+Me5iTCwrO7Nur9NJ70qSdxtyTVBIv9zYVi
+AMMXF9oLwdv1sRPP0DXeMK18Qn+6jZPCE8fQnI7kIG68S9sg1ExDOaq1dwzKLFUi
+kAKvwwubo6i+wKRGaAcjf9HKsowIqrnV3iFzAygUvSeJCIZrjSuRb303DAozRtwi
+xIaZhVwLQ5Seh1SrDgNcITTUgfMamO1I0XD0HUeBhEc9hecNGMqXSmFRSoeVFNH4
+PgEKKUkQB6dsQYjslSMdUxb7m3kOD5/0W5OK+NHnyWduWL5EFCui1VDNYxDnF5kF
+JlrjAFSJjg2ue56EwOxRsz6Fjrj6z7LKocEh3yJwXFDlite4xJGHIYqrGiLs1/GF
+OJ52VDOUiMadZcoFv+i9bVtT3oevVKS8zXHWCn1pHRjigl6FHRDxEpmyADrNwrqY
+U5c18KsKtWefcA0EXv55Pt4rYGCtyjfwUAREodGiZmxCDvGIEJTdhvs+nzRQQxc/
+OindTP39Z9OFD60m+vFD7DnmEgVhrp8rxLvRqB5Af6k7vo77vjOTamSWRqoKXSyz
+C8JSR45gOP0FWGQ03fkb
+=hW84
 -----END PGP SIGNATURE-----
